<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFEAEF"
    android:orientation="vertical"
    tools:context=".IncomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="#19688b"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:padding="@dimen/_7sdp"
            android:background="@drawable/efect"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/expense_manager"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <ImageView
                android:id="@+id/imgAdd"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:padding="@dimen/_7sdp"
                android:background="@drawable/efect"
                android:src="@drawable/right" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keyboardNavigationCluster="false"
        android:isScrollContainer="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:text="@string/type"
                        android:textColor="#19688A"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/rgType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:weightSum="2">

                        <RadioButton
                            android:id="@+id/rbIncome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Income"
                            android:textSize="@dimen/_15ssp" />

                        <RadioButton
                            android:id="@+id/rbExpense"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Expense"
                            android:textSize="@dimen/_15ssp" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:text="@string/amount"
                        android:textColor="#19688A"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Amount"
                        android:textSize="@dimen/_15ssp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:inputType="number"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:text="@string/category"
                        android:textColor="#19688A"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spnCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15ssp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:inputType="number"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:text="@string/date"
                        android:textColor="#19688A"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_15ssp"
                        android:text="16/05/2005"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:inputType="number"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:text="@string/mode"
                        android:textColor="#19688A"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Mode"
                        android:textSize="@dimen/_15ssp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_2sdp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:text="@string/note"
                        android:textColor="#19688A"
                        android:textSize="@dimen/_15ssp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Note"
                        android:textSize="@dimen/_15ssp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_2sdp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>