<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drewerlayout"

    tools:context=".HomeActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="#19688b"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imgDrawer"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:padding="@dimen/_2sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:background="@drawable/efect"
                android:src="@drawable/menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:text="Expense Manager"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:backgroundTint="#DAF5FF"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@drawable/efect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:src="@drawable/money"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/add_income"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:textColor="#196689"
                    android:textSize="@dimen/_17ssp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdExpenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="#D4E8FF"
            android:layout_marginBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@drawable/efect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:src="@drawable/cash"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/add_expenses"
                    android:textStyle="bold"
                    android:textColor="#4B81BE"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:backgroundTint="#FFECDD"
            android:layout_marginBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@drawable/efect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:src="@drawable/transaction"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/all_transaction"
                    android:textStyle="bold"
                    android:textColor="#E38A44"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:backgroundTint="#FFDADB"
            android:layout_marginBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@drawable/efect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:src="@drawable/progr"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/reports"
                    android:textStyle="bold"
                    android:textColor="#FF7175"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:backgroundTint="#CCFFCC"
            android:layout_marginBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:background="@drawable/efect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:src="@drawable/category"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/category_1"
                    android:textStyle="bold"
                    android:textColor="#00B300"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:drawerLayoutCornerSize="0dp"
        android:layout_gravity="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/expense_drawer"
                android:scaleType="fitXY"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:background="@drawable/efect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:src="@drawable/home"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Home"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="#19688B"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/efect"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/calendar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Calender"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="#19688B"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:background="@drawable/efect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/dollar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Payment Mode"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="#19688B"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:background="@drawable/efect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/exported_report"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Exported Report"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="#19688B"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:background="@drawable/efect"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:src="@drawable/settings"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Setting"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="#19688B"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/app_lock"/>

                <TextView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:text="App Lock"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="#19688B"/>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:searchResultHighlightColor="#19688B"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>